# python-solution-starter

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  __init__.py  config.py  input.txt  logger.py  main.py  pyproject.toml  requirements.txt  setup.py  tests.py  utils.py
.github/workflows/: tests.yml
tests/: __init__.py  test_main.py
